--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+- Make header matches in the opening handshake case-insensitive.
 - Accept WebSocket messages that comprise of multiple frames.
 - Check the WebSocket version (only 13 permitted).
 - Implement stream resumption (after browser disconnects and reconnects).
